# Compiler_Project

./: .gitignore  CMakeLists.txt  readme.md
resource/test/: mod_a.asm  mod_b.asm
src/data/: data.cpp  data.h
src/ligador/: ligador.cpp
src/ligador/structure/Global_Module/: Global_Module.cpp  Global_Module.h
src/ligador/structure/Module/: Module.cpp  Module.h
src/ligador/structure/Module/alias/: alias.h
src/ligador/utils/: utils.cpp  utils.h
src/montador/: montador.cpp  types.hpp
src/montador/Struture/Instruction/: Instruction.hpp
src/montador/Struture/ProgramRawFile/: FileLine.hpp  ProgramRawFile.hpp
src/montador/Struture/Section/: Section.hpp
src/montador/first_pass/: first_pass.cpp  first_pass.h
src/montador/resource/test/: mod_a.asm  mod_b.asm  test.asm
src/montador/second_pass/: second_pass.cpp  second_pass.h
src/montador/structure/Instruction/: Instruction.hpp
src/montador/structure/Module/: Module.cpp  Module.h
src/montador/structure/Module/Error/: Error.cpp  Error.h
src/montador/structure/Module/alias/: alias.h
src/montador/structure/Module/aux/: aux.cpp  aux.h
src/montador/structure/Module/module_aliases/: module_aliases.h
src/montador/structure/Object_Code/: Object_Code.h
src/montador/structure/ProgramRawFile/: FileLine.hpp  ProgramRawFile.hpp
src/montador/structure/Section/: Section.hpp
src/montador/utils/: utils.cpp  utils.hpp
src/simulador/: simulador.cpp
src/simulador/Program/: Program.cpp  Program.h
